# ci-cd

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: main.py  model_functions.py
templates/: .ci-include-linting.yml
test/: test_main.py  test_model_functions.py
