[tool.poetry]
name = "CI-CD"
version = "0.1.0"
description = ""
authors = ["Lewis Marshall <lewis.marshall@faculty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
TensorFlow1 = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
