[tool.poetry]
name = "ci-cd"
version = "0.1.0"
description = ""
authors = ["Lewis Marshall <lewis.marshall@faculty.ai>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
